--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #fff;
   color: #434455;
+  background-color: #ffffff;
 }
 
 ul,
@@ -12,7 +12,18 @@ ol {
 }
 
 a {
+  list-style-type: none;
   text-decoration: none;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.02em;
+}
+p {
+  margin: 0;
 }
 
 h1,
@@ -20,73 +31,36 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   margin: 0;
 }
 
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 img {
   display: block;
 }
 
-/*Загалні стилі*/
-
-.container {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.title-headline {
-  margin-bottom: 72px;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  text-transform: capitalize;
-}
-
-.title-subject {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-
-.text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
-.svg {
-  fill: #f4f4fd;
-}
-
-/*Header*/
+/* header */
 
 .header-page {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
-
 .header-container {
   display: flex;
   align-items: center;
 }
-
-.header-nav {
+.header-navigation {
   display: flex;
   align-items: center;
 }
 
-.logo,
-.logo-footer {
+.header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -94,359 +68,461 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  text-decoration: none;
+  margin-right: 76px;
+  padding: 24px 0;
 }
-
-.logo-studio {
+.logo-s-part {
   color: #2e2f42;
 }
 
-.logo {
-  padding: 24px 0;
-  margin-right: 76px;
-}
-
-.list-nav {
+.navigation-list {
   display: flex;
   align-items: center;
   gap: 40px;
 }
-
-.list-contacts {
-  gap: 40px;
-  display: flex;
-  align-items: center;
-}
-
-.link-nav {
-  display: block;
-  padding: 24px 0;
+.navigation-link {
+  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: block;
+  padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-nav.underline {
-  position: relative;
-  color: #404bbf;
-}
-
-.link-nav.underline::after {
+.navigation-link::after {
   content: "";
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
   position: absolute;
   left: 0;
   bottom: -1px;
-  background-color: #404bbf;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: #404bbf;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link:hover::after,
+.navigation-link:focus::after,
+.navigation-link.current::after {
+  opacity: 1;
 }
 
 .contacts {
-  margin-left: auto;
   font-style: normal;
+  margin-left: auto;
 }
 
-.link-contacts {
-  padding: 24px 0;
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contacts-link {
   display: block;
-  font-weight: 400;
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link-contacts:hover,
-.link-contacts:focus,
-.link-nav:hover,
-.link-nav:focus {
+.navigation-link:hover,
+.navigation-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.navigation-link.current {
   color: #404bbf;
 }
 
-/*Section 1*/
+.contacts {
+  font-style: normal;
+}
 
-.section-solutions {
-  padding: 188px 0;
-  background-color: #2e2f42;
+/* main */
+
+.main-title-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding-top: 188px;
+  padding-bottom: 188px;
   background-image: linear-gradient(
-      to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero-image.jpg);
+    url("../images/hero-image.jpg");
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   max-width: 1440px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.title-heading {
-  margin: 0 auto 24px;
-  max-width: 496px;
+.main-title-effective {
+  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #fff;
-}
-
-.btn-order {
-  border: none;
-  min-height: 56px;
-  min-width: 169px;
+  text-align: center;
+  max-width: 496px;
+  margin-bottom: 48px;
   margin-left: auto;
   margin-right: auto;
-  display: block;
-  box-shadow: 0 4px 4px 0 #00000026;
-  border-radius: 4px;
-  padding: 16px 32px;
+}
+
+.order-btn {
   font-family: "Roboto", sans-serif;
-  background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
+  background-color: #4d5ae5;
+  display: block;
+  min-width: 169px;
+  border-radius: 4px;
+  height: 56px;
+  border: none;
+  margin-left: auto;
+  margin-right: auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-order:hover,
-.btn-order:focus {
+.order-btn:hover,
+.order-btn:focus {
   background-color: #404bbf;
 }
+.main-title-section {
+  background-color: #2e2f42;
+}
 
-/*Section 2 Text*/
+/* soft-Skills */
+
+.soft-skills {
+  background-color: #ffffff;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
 .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
   margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-  white-space: nowrap;
   border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
-.section-text {
-  padding: 120px 0;
-}
-
-.item-text {
-  flex-basis: calc((100% - 72px) / 4);
-}
-
-.list-icon-text {
+.soft-skills-list {
   display: flex;
   gap: 24px;
 }
 
-.item-icon-text {
-  flex-basis: calc((100% - 72px) / 4);
+.soft-skills-item {
+  width: calc((100% - 72px) / 4);
 }
 
-.text-icon-wrapper {
-  margin-bottom: 8px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  background-color: #f4f4fd;
-  height: 112px;
-  justify-content: center;
+.soft-skills-icons {
   display: flex;
   align-items: center;
-}
-
-/*Section 3 Team*/
-
-.teammates {
-  padding: 32px 0;
-}
-
-.list-team {
-  display: flex;
-  gap: 24px;
-}
-
-.item-team {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  flex-basis: calc((100% - 72px) / 4);
-}
-
-.section-team {
-  padding: 120px 0;
-  background: #f4f4fd;
-}
-
-.title-team {
-  text-align: center;
-}
-
-.text-team {
-  text-align: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
   margin-bottom: 8px;
 }
 
-.item-team {
-  background-color: #ffffff;
+.soft-Skills-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.soft-skills-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.soft-skills-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
-.list-icon-wrapper {
-  margin: 0 16px;
+/* Our Team */
+
+.our-team {
+  background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.our-team-list {
   display: flex;
-  justify-content: center;
   gap: 24px;
 }
 
-.item-icon-wrapper {
-  flex-basis: calc((100% - 72px) / 4);
+.our-team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.our-team-item {
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  flex-basis: calc((100% - 3 * 24px) / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.our-team-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.our-team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
+}
+
+.our-team-content {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.our-team-icons-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.our-team-icons-item {
   width: 40px;
   height: 40px;
 }
 
-.social-icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 12px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  border-radius: 50%;
-  background-color: #4d5ae5;
-  height: 100%;
+.our-team-icons-link {
   width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon:hover,
-.social-icon:focus {
+.our-team-icons-link:hover {
+  background-color: #404bbf;
+}
+.our-team-icons-link:focus {
   background-color: #404bbf;
 }
 
-/*Section 4 Portfolio*/
-
-.portfolio {
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  padding: 32px 16px;
-  display: block;
+.our-team-icons-svg {
+  fill: #f4f4fd;
 }
 
-.item-portfolio:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+/* Our Portfolio */
+
+.our-portfolio {
+  background-color: #ffffff;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
-.item-portfolio {
-  flex-basis: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.our-portfolio-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
-.list-portfolio {
+.our-portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
   row-gap: 48px;
 }
 
-.section-portfolio {
-  padding: 120px 0;
+.our-portfolio-list:hover {
+  transform: translateY(0%);
 }
 
-.text-portfolio-overlay {
-  height: 100%;
-  width: 100%;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 40px 32px;
-  top: 0;
-  position: absolute;
-  background: #4d5ae5;
-  color: #f4f4fd;
-  transform: translateY(100%);
+.our-portfolio-item {
+  width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-wrapper {
+.our-portfolio-conteiner {
   position: relative;
   overflow: hidden;
 }
-
-.item-portfolio:hover .text-portfolio-overlay {
-  transform: translateY(0);
+.our-portfolio-conteiner-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*Footer*/
+.our-portfolio-item:hover .our-portfolio-conteiner-text {
+  transform: translateY(0%);
+}
 
-.logo-footer {
+.our-portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.our-portfolio-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.our-portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.section-content {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+/* footer */
+
+.footer-page {
+  background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.content {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-page-studio {
+  margin-right: 120px;
+}
+
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  text-decoration: none;
   display: inline-block;
   margin-bottom: 16px;
 }
 
-.footer-page {
-  padding-bottom: 100px;
-  padding-top: 100px;
-  background-color: #2e2f42;
-}
-
-.logo-footer-studio {
+.logo-part {
   color: #f4f4fd;
 }
 
-.text-footer {
+.footer-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
   max-width: 264px;
-  color: #f4f4fd;
 }
-.text-footer-media {
-  color: #fff;
+
+.footer-page-media-text {
   font-weight: 500;
-  width: 96px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
   margin-bottom: 16px;
 }
-.footer-container {
-  align-items: baseline;
-  display: flex;
-}
 
-.logo-media {
-  margin-right: 120px;
-}
-
-.list-icon-wrapper-footer {
+.footer-page-media-list {
   display: flex;
-  justify-content: center;
   gap: 16px;
 }
 
-.item-icon-wrapper-footer {
+.footer-page-media-item {
   width: 40px;
   height: 40px;
-  flex-basis: calc((100% - 48px) / 4);
 }
 
-.social-icon-footer {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 8px;
-  justify-content: center;
-  align-items: center;
+.footer-page-media-link {
   display: flex;
-  border-radius: 50%;
-  background-color: #4d5ae5;
-  height: 100%;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon-footer:hover,
-.social-icon-footer:focus {
+.footer-page-media-link:hover {
+  background-color: #31d0aa;
+}
+
+.footer-page-media-link:focus {
   background-color: #31d0aa;
 }
